fixed firefox layout broken

--- a/js/map_style.css
+++ b/js/map_style.css
@@ -297,6 +297,7 @@ position: relative;
 height:550px;
 position:absolute;
 top:34px;left:0;*/
+  height: 100%;
 }
 
 #right_wrap{
